<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SuperCamera</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    
    <string name="action_start">Start Recorder</string>
    <string name="action_stop">Stop Recorder</string>
    <string name="action_delete">Delete All</string>
    <string name="notification">Recording!</string>
    
    <string name="video_file_name_format" translatable="false">"yyyyMMdd_HHmmss"</string>
    
    <string name="recorder_error_toast">Recorde errors, please check SD card!</string>
    <string name="recorder_error_toast_no_space">Recorde errors, maybe do\'t have enough memory space!</string>
    
    <string name="mainHint2">Welcome, Please drive carefully!</string>
    <string name="playback">Playback</string>
    <string name="account">Expense</string>
    <string name="account_detail">Expense details</string>
    <string name="more">More</string>
    <string name="setting">Setting</string>
    
     <string name="zhirui_copyright">© zhwuba@yahoo.com</string>

</resources>